edit package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@wm.madfaa/eslint-config",
+  "name": "@wm-madfaa-dev/eslint-config",
   "version": "0.0.1",
   "description": "eslint config ready to be used in multiple projects",
   "author": "wasim almadfaa",
